@@ -115,6 +115,9 @@ arguments if their associated long options require arguments as well.
            Specifies the directory containing the skeleton files to use. This
             option can be overridden by the specific skeleton-specifying
             options (tt(-B -C, -H,) and tt(-I)).
+    it() laoption(target-directory)(directory) nl() 
+           Specifies the directory where generated files should be written.
+            By default this is the directory of flc()'s input file.
     it() loption(usage) (soption(h))nl()
             Write basic usage information to the standard output stream and
             terminate. 
