@@ -5,6 +5,7 @@
 
 char Options::s_defaultSkeletonDirectory[]       = _Skel_;
 char Options::s_defaultLexFunctionName[]        = "lex";
+char Options::s_defaultTargetDirectory[]        = "";
 char Options::s_defaultClassName[]              = "Scanner";
 
 Options Options::s_options;
