@@ -3,7 +3,7 @@
 void Options::setSkeletonDirectory(string const &name)
 {
     if (d_skeletonDirectory.size())
-        cerr << "%option skeleton-directory (-S) specified multiple times\n";
+        cerr << "%skeleton-directory (-S) specified multiple times\n";
     else
         setPath(&d_skeletonDirectory, name);
 }
