@@ -4,6 +4,11 @@ flexc++ (0.91.00)
     ending in '\n'. Caused by Input's d_in == 0 after an earlier EOF
     detection, and then calling d_in->get(). Repaired by testing for d_in == 0
 
+  * Added --target-dir option (and directive) to define where the generated
+    files should be written if not at the default (lexer) location.
+
+  * The earlier minor versions should have been .9 rather than .09
+
 flexc++ (0.09.52)
 
   * The Scannner(std::string infile, std::string outfile) and 
